--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.546.0",
     "next": "16.0.1",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.13",
     "puppeteer": "^24.26.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
