--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.546.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "puppeteer": "^24.26.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "swiper": "^12.0.3"
   },
@@ -30,7 +30,7 @@
     "@types/react-dom": "19.2.2",
     "baseline-browser-mapping": "^2.9.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.7",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
     "typescript": "^5"
